--- a/Usage.ipynb
+++ b/Usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6b88b4bc-a5c4-436d-9eed-8e95600f6d53",
    "metadata": {
     "editable": true,
@@ -32,20 +32,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "hi\n"
+      "hello, I am Oliver\n",
+      "hi\n",
+      "Oliver is eating.\n",
+      "Oliver is sleeping.\n",
+      "Oliver is moving.\n",
+      "Oliver is a wonderful animal.\n",
+      "Hello, my name is Oliver and I am an animal.\n"
      ]
     }
    ],
    "source": [
-    "x = Animal()\n",
-    "x.talk()"
+    "x = Animal(\"Oliver\")\n",
+    "x.talk()\n",
+    "x.eat()          \n",
+    "x.sleep()        \n",
+    "x.move()         \n",
+    "x.describe()     \n",
+    "x.introduce()  "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
